maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:5: error: forward reference extends over definition of value sortie
  val sortie = findExit();
               ^ShortestPathMaze:6: error: forward reference extends over definition of value X
  marquerSol(sortie, 0);
  ^ShortestPathMaze:6: error: forward reference extends over definition of value Y
  marquerSol(sortie, 0);
  ^